--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Questrial&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Questrial&display=swap");
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: 'Questrial', sans-serif;
+  font-family: "Questrial", sans-serif;
   background-color: #666;
   display: flex;
   flex-direction: column;
@@ -46,11 +46,11 @@ h1 {
 }
 
 .controls .fa-play {
-  color: #28a745;
+  color: #448b55;
 }
 
 .controls .fa-stop {
-  color: #dc3545;
+  color: #c24d58;
 }
 
 .controls .fa-pause {
